# gitHub_repo_parser

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml
bot/: __main__.py
bot/core/: config.py
