[tool.poetry]
name = "github-notify-tgbot"
version = "2.0.0"
description = "Best way to fetch info from GH"
homepage = "https://github.com/AlanForester/github-repo_parser"
repository = "https://github.com/AlanForester/github-repo_parser"
authors = ["Alan Forester <alan@forester.pro>"]
license = "LGPL-v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"

[tool.poetry.group.bot.dependencies]
aiogram = "^3.3.0"
redis = "^5.0.1"
loguru = "^0.7.2"
aiohttp = "^3.8.6"
babel = "^2.13.1"
cachetools = "^5.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
select = ["ALL"]
ignore = ["D", "ANN101", "ANN102", "ANN401", "TD003", "FIX002", "COM812", "ISC001", "FBT001", "FBT002", "RUF", "ERA", "ARG005"]
cache-dir = "/tmp/ruff-cache/"
extend-exclude = ["logs", "configs"]

[tool.ruff.isort]
no-lines-before = ["future", "standard-library"]
known-local-folder = ["bot", "admin"]

[tool.ruff.extend-per-file-ignores]
"tests/*.py" = ["ANN401", "S101", "S311"]

[tool.mypy]
python_version = "3.10"
files = "bot/*.py"
ignore_missing_imports = false
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
show_error_context = true
pretty = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
